// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > if bgColor is provided, it should render a letter avatar with the provided background color 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; background-color: #ffffff; color: #000; border-radius: 50%; user-select: none;"
  >
    
    JD
    
    <!--v-if-->
  </div>
</div>
`;

exports[`Avatar > if only the name is provided, it should render a letter avatar 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; background-color: #a55c80; color: #fff; border-radius: 50%; user-select: none;"
  >
    
    JD
    
    <!--v-if-->
  </div>
</div>
`;

exports[`Avatar > if the image is not loaded, it should render a letter avatar 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; background-color: #a55c80; color: #fff; border-radius: 50%; user-select: none;"
  >
    
    JD
    
    <!--v-if-->
  </div>
</div>
`;

exports[`Avatar > renders a image correctly 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; border-radius: 50%; user-select: none;"
  >
    <!--v-if-->
    <img
      src="https://fakeimg.pl/300/"
      style="position: absolute; width: 100%; height: 100%; color: transparent;"
    />
  </div>
</div>
`;

exports[`Avatar > variant: rounded + round 4px 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; border-radius: 4px; user-select: none;"
  >
    <!--v-if-->
    <img
      src="https://fakeimg.pl/300/"
      style="position: absolute; width: 100%; height: 100%; color: transparent;"
    />
  </div>
</div>
`;

exports[`Avatar > variant: rounded 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; border-radius: 8px; user-select: none;"
  >
    <!--v-if-->
    <img
      src="https://fakeimg.pl/300/"
      style="position: absolute; width: 100%; height: 100%; color: transparent;"
    />
  </div>
</div>
`;

exports[`Avatar > variant: square 1`] = `
<div>
  <div
    style="position: relative; display: flex; justify-content: center; align-items: center; flex-shrink: 0; width: 40px; height: 40px; user-select: none;"
  >
    <!--v-if-->
    <img
      src="https://fakeimg.pl/300/"
      style="position: absolute; width: 100%; height: 100%; color: transparent;"
    />
  </div>
</div>
`;
